--- a/sections/conclusion.tex
+++ b/sections/conclusion.tex
@@ -5,4 +5,4 @@ We use the FFTLog algorithm to model the angular clustering on large scales. We 
 
 Multivariate linear and neural network-based regression models are applied to regress out spurious fluctuations in the LRG density field against various maps for the extinction, survey depth, astronomical seeing, neural hydrogen column density, and stellar density. Feature selection uses the Pearson correlation and the Spearman correlation coefficients to reduce the likelihood of over-correction, i.e., removing the clustering signal. The LRG density map is cross-correlated against the imaging maps. We quantify the remaining systematic fluctuations using the mean density and cross-power spectrum and run null tests against lognormal density fields. Our simulation-based tests reveal that the DR9 LRG sample with linear correction suffers from remaining systematic error primarily due to depth variations. We observe that the nonlinear mitigation approach reduces the excess clustering signal more effectively. We identify the extinction, z-band depth, and r-band seeing as the primary sources of systematic error. 
 
-We apply our cleaning methods to the lognormal mocks with and without PNG, with and without systematic effects, to calibrate the level of mitigation biases introduced in our constraints. With this conservative set of maps, we obtain values inconsistent with zero at more than $95\%$ confidence. Adding a template for local stellar density does not change the limits. However, using all imaging maps and stellar density yields an asymmetric likelihood distribution. Nevertheless, our nonlinear cleaning methods return consistent maximum likelihood estimates. Assuming Planck's measurement is accurate a priori, our results indicate some unknown systematic error. Our results suggest a follow-up investigation of stellar contamination and depth-related variations in the spectroscopic sample of DESI LRGs. A second source of theoretical uncertainty is that our analysis considers the halo bias depends on halo mass only. So, a better characterization of observational uncertainties, coupled with more simulation-based studies of halo-assembly bias, is crucial to constrain local primordial non-Gaussianity with large-scale structure.
+We apply our cleaning methods to the lognormal mocks with and without PNG, with and without systematic effects, to calibrate the level of mitigation biases introduced in our constraints. With this conservative set of maps, we obtain values inconsistent with zero at more than $95\%$ confidence. Adding a template for local stellar density does not change the limits for our conservative approaches. However, using all imaging maps and stellar density yields an asymmetric likelihood distribution with larger uncertainty. Overall, our nonlinear cleaning methods return consistent maximum likelihood estimates of $\fnl \sim 47-50$. Assuming Planck's measurement is accurate a priori, our results indicate some unknown systematic error. Our results suggest a follow-up investigation of stellar contamination and depth-related variations in the spectroscopic sample of DESI LRGs. A second source of theoretical uncertainty is that our analysis considers the halo bias depends on halo mass only. So, a better characterization of observational uncertainties, coupled with more simulation-based studies of halo-assembly bias, is crucial to constrain local primordial non-Gaussianity with large-scale structure.
