--- a/sections/results.tex
+++ b/sections/results.tex
@@ -1,7 +1,7 @@
 \section{Results}\label{sec:results}
 \subsection{DESI imaging LRG sample}
 
-Fig. \ref{fig:cl_dr9} shows the measured power spectrum of the DESI imaging DR9 LRG sample before and after applying imaging weights, the best fit theory curves, and the mean power spectrum and 1$\sigma$ error estimated from the $\fnl=0$ lognormal simulations. The power spectra are similar on small scales ($\ell > 20$), but the differences between various cleaning methods are significant on large scales. By comparing \textit{linear conservative I} to \textit{linear conservative II}, we find that the measure power spectra on modes with $6\leq \ell < 10$ are noticeably different between the two methods. We associate the differences to the r-band psfsize template in \textit{linear conservative II}. On other scales, the differences between the spectra after the linear-based cleaning are negligible, supporting the idea that our feature selection procedure has worked to identify the primary maps causing excess clustering signal. Comparing \textit{nonlinear conservative II} to \textit{linear conservative II}, we find that the measured spectra on $4 \leq \ell < 6$ are very different, probably pointing at nonlinear spurious fluctuations with large-scale characteristics due to the extinction. Adding stellar density to the nonlinear approach (\textit{nonlinear conservative II + nStar}) results in less excess power relative to the mock power spectrym, with the modes on $2\leq \ell < 4$ reflecting the biggest change. The flexibility of the nonlinear approach to correct for these effects ameliorates the clustering measurements on these scales.
+Figure \ref{fig:cl_dr9} shows the measured power spectrum of the DR9 LRG sample before and after applying imaging weights, the best fit theory curves, and the mean power spectrum and 1$\sigma$ error estimated from the $\fnl=0$ lognormal simulations. The power spectra are similar on small scales ($\ell > 20$), but the differences between various cleaning methods are significant on large scales. By comparing \textit{linear conservative I} to \textit{linear conservative II}, we find that the measured clustering power on modes with $6\leq \ell < 10$ are noticeably different between the two methods. We associate the differences to the additional map for psfsize in the r-band for \textit{linear conservative II}. On other scales, the differences between the spectra after the linear-based cleaning are negligible, supporting the idea that our feature selection procedure has been effective to identify the primary maps causing the large-scale excess clustering signal. Comparing \textit{nonlinear conservative II} to \textit{linear conservative II}, we find that the measured spectra on $4 \leq \ell < 6$ are very different, probably indicating some nonlinear spurious fluctuations with large scale characteristics due to extinction. Including stellar density in the nonlinear approach (\textit{nonlinear conservative II + nStar}) further reduces the excess power relative to the mock power spectrum, in particular on modes between $2\leq \ell < 4$. We associate this to the flexibility of the nonlinear approach in correcting for systematics effects on multiples scales.
 
 \begin{figure}
     \centering
@@ -16,11 +16,11 @@ Fig. \ref{fig:cl_dr9} shows the measured power spectrum of the DESI imaging DR9 
     \raggedleft
     \includegraphics[width=0.424\textwidth]{mcmc_dr9methods1d.pdf}
     \includegraphics[width=0.45\textwidth]{figures/mcmc_dr9methods.pdf} 
-    \caption{Calibrated constrains from the DR9 LRG sample. \textit{Top}: probability distribution for $\fnl$ marginalized over the shotnoise and bias. \textit{Bottom}: $68\%$ and $95\%$ probability distribution contours for the bias and $\fnl$ from the DR9 LRG sample before and after applying nonlinear cleaning methods. The lognormal mocks are used to correct these distributions for mitigation bias.}\label{fig:mcmc_dr9}
+    \caption{The calibrated constrains from the DR9 LRG sample. \textit{Top}: probability distribution for $\fnl$ marginalized over the shotnoise and bias. \textit{Bottom}: $68\%$ and $95\%$ probability distribution contours for the bias and $\fnl$ from the DR9 LRG sample before and after applying nonlinear cleaning methods. The lognormal mocks are used to correct these distributions for mitigation bias.}\label{fig:mcmc_dr9}
 \end{figure}
 
 \begin{table*}
-    \caption{Calibrated best fit and marginalized mean estimates for $\fnl$ from fitting power spectrum of the DESI DR9 LRG sample before and after correcting for systematics. Degree of freedom is 34 (37 data points - 3 parameters).}
+    \caption{The calibrated best fit and marginalized mean estimates for $\fnl$ from fitting power spectrum of the DESI DR9 LRG sample before and after correcting for systematics. Degree of freedom is 34 (37 data points - 3 parameters).}
     \label{tab:dr9methodcalib}
    \centerline{%     
     \begin{tabular}{llllllll}
@@ -39,14 +39,14 @@ DESI                      & Nonlin. (All Maps+nStar)& $ 49.69$& $ 41.91$& $ 13.1
 }
 \end{table*}
 
-All $\fnl$ constraints presented here are calibrated for the effect of mitigation bias using the lognormal simulations. Tab. \ref{tab:dr9methodcalib} describes the best fit and marginalized mean estimates of $\fnl$ from fitting the power spectrum of the DR9 LRG sample before and after cleaning with the nonlinear approach given various combinations of imaging templates. Fig \ref{fig:mcmc_dr9} shows the marginalized probability distribution for $\fnl$ (top) and the $68\%$ and $95\%$ probability contours for the bias parameter and $\fnl$ from the DR9 sample before (\textit{no weight}) and after applying various imaging weights. With the imaging weights applied, we obtain $36.08 (25.03) < \fnl < 61.44(75.64)$ with $\chi^{2}=34.6$ for \textit{nonlinear conservative II}, $36.88(24.87) < \fnl < 63.31(77.78)$ with $\chi^{2}=35.2$ for \textit{nonlinear conservative II + nStar}, and $13.10(-15.96) < \fnl < 69.14(91.84)$ with $\chi^{2}=39.5$ for \textit{nonlinear all maps + nStar} at $68\% (95\%)$ confidence over 34 degrees of freedom. Overall, we find the maximum likelihood estimates to be consistent between among the various cleaning methods. For the conservative methods, the confidence intervals with or without $nStar$ are consistent and more than $3\sigma$ off from zero. The method \textit{nonlinear all maps+nStar} has asymmetric probability distribution, a larger uncertainty, and consistent with $\fnl=0$ within the $95\%$ confidence interval. For comparison, we obtain $98.14(83.51) < \fnl < 132.89(151.59)$ at $68\% (95\%)$ confidence with $\chi^{2}=44.4$ for the \textit{no weight} approach. The uncalibrated probability contours are presented in Appendix \ref{sec:dr9uncalib}.
+All $\fnl$ constraints presented here are calibrated for the effect of mitigation bias using the lognormal simulations. Table \ref{tab:dr9methodcalib} describes the best fit and marginalized mean estimates of $\fnl$ from fitting the power spectrum of the DR9 LRG sample before and after cleaning with the nonlinear approach given various combinations of imaging maps. Figure \ref{fig:mcmc_dr9} shows the marginalized probability distribution for $\fnl$ (top) and the $68\%$ and $95\%$ probability contours for the linear bias parameter and $\fnl$ (bottom) from our sample before (\textit{no weight}) and after applying various imaging weights. We obtain $36.08 (25.03) < \fnl < 61.44(75.64)$ with $\chi^{2}=34.6$ for \textit{nonlinear conservative II}, $36.88(24.87) < \fnl < 63.31(77.78)$ with $\chi^{2}=35.2$ for \textit{nonlinear conservative II + nStar}, and $13.10(-15.96) < \fnl < 69.14(91.84)$ with $\chi^{2}=39.5$ for \textit{nonlinear all maps + nStar} at $68\% (95\%)$ confidence over 34 degrees of freedom. Overall, we find the maximum likelihood estimates to be consistent among the various cleaning methods. For the conservative methods, the confidence intervals with or without $nStar$ are consistent with each other and more than $3\sigma$ off from zero PNG. The method \textit{nonlinear all maps+nStar} has asymmetric probability distribution with a larger uncertainty, and is consistent with $\fnl=0$ at $95\%$ confidence. For comparison, we obtain $98.14(83.51) < \fnl < 132.89(151.59)$ at $68\% (95\%)$ confidence with $\chi^{2}=44.4$ for the \textit{no weight} approach. The uncalibrated probability contours are presented in Appendix \ref{sec:dr9uncalib}.
 
 
 \subsubsection{Robustness tests}
-Now we proceed to perform some robustness tests and assess how sensitive the $\fnl$ constraints are to the assumptions made in the analysis or the quality cuts applied to the data. For each case, we retrain the cleaning methods and derive new sets of imaging weights. Similarly, for the cases where a cut is applied on the data, we re-calculate the covariance matrices using the new masked footprint to account for the changes in the window and integral constraint effect. calibrating the mitigation bias for all of these experiments is beyond the scope of this work. Therefore, the $\fnl$ constraints presented here are subject to the mitigation bias effect. Table \ref{tab:dr9method} describes the uncalibrated $\fnl$ constraints from the DR9 LRG sample. Our tests are as follows:
+Now we proceed to perform some robustness tests and assess how sensitive the $\fnl$ constraints are to the assumptions made in the analysis or the quality cuts applied to the data. For each case, we re-train the cleaning methods and derive new sets of imaging weights. Accordingly, for the cases where a new survey mask is applied on the data, we re-calculate the covariance matrices using the new survey mask to account for the changes in the survey window and integral constraint effects. Calibrating the mitigation biases for all of these experiments is beyond the scope of this work and redundant. Therefore, the $\fnl$ constraints presented here are subject to the mitigation bias effect. Table \ref{tab:dr9method} describes the uncalibrated $\fnl$ constraints from the DR9 LRG sample. Our tests are as follows:
 
 \begin{table*}
-    \caption{Uncalibrated best fit and marginalized mean estimates for $\fnl$ from fitting power spectrum of the DR9 LRG sample before and after correcting for systematics. Degree of freedom is 34 (37 data points - 3 parameters).}
+    \caption{The uncalibrated best fit and marginalized mean estimates for $\fnl$ from fitting power spectrum of the DR9 LRG sample before and after correcting for systematics. Degree of freedom is 34 (37 data points - 3 parameters).}
     \label{tab:dr9method}
    \centerline{%     
     \begin{tabular}{llllllll}
@@ -94,36 +94,37 @@ DECaLS South (comp. cut)       & Nonlin. (Cons. II)& $ 29.62$& $ 31.76$& $ 13.00
 
 \begin{itemize}
 
-\item \textbf{Linear methods}: We find consistent $\fnl$ constraints from \textit{linear all maps} and \textit{linear conservative II} which support the idea that all imaging maps are not needed to completely mitigate systematic effects. We find $\sigma (\fnl) \sim 25$ for the linear methods. 
+\item \textbf{Linear methods}: We find consistent $\fnl$ constraints from \textit{linear all maps} and \textit{linear conservative II} which suggests that all imaging maps are not needed to completely mitigate systematic effects. We find $\sigma (\fnl) \sim 25$ for the linear methods. With the same set of imaging maps, the nonlinear method yields smaller constraint, $\Delta \fnl = -8$, and a better $\chi^{2}$ fit, e.g., $34.6$ vs $39.6$.
 
-\item \textbf{Imaging regions}: We compare how the $\fnl$ constraints from fitting the power spectrum of the whole DESI footprint compares to that from the power spectrum for each sub-survey individually, namely BASS+MzLS, DECaLS North, and DECaLS South. Fig. \ref{fig:mcmc_dr9reg} shows $68\%$ and $95\%$ probability contours on $\fnl$ and $b$ from each individual region, compared with that from DESI. The cleaning method here is \textit{nonlinear conservative II}. Overall, we find that the constraints from all imaging surveys are consistent with each other within $68\%$ confidence. Both BASS+MzLS and DECaLS South yield constraints consistent with $\fnl=0$ within $95\%$, but DECaLS North deviates from zero PNG at more than $2\sigma$. 
+\item \textbf{Imaging regions}: We compare how the $\fnl$ constraints from fitting the power spectrum of the whole DESI footprint compares to that from the power spectrum for each imaging region individually, namely BASS+MzLS, DECaLS North, and DECaLS South. Figure \ref{fig:mcmc_dr9reg} shows the $68\%$ and $95\%$ probability contours on $\fnl$ and $b$ from each individual region, compared with that from DESI. The cleaning method here is \textit{nonlinear conservative II}. Overall, we find that the constraints from all imaging surveys are consistent with each other within $68\%$ confidence. Both BASS+MzLS and DECaLS South yield constraints consistent with $\fnl=0$ within $95\%$, but DECaLS North deviates from zero PNG at more than $2\sigma$. This motivates follow-up studies with the spectroscopic sample of LRGs in DECaLS North.
 
-\begin{figure}
-    \centering
-    \includegraphics[width=0.45\textwidth]{figures/mcmc_dr9regions.pdf} 
-    \caption{Uncalibrated 2D constraints from the DR9 LRG sample for each imaging survey compared with that for the whole DESI footprint. The dark and light shades represent the $68\%$ and $95\%$ confidence intervals, respectively.}\label{fig:mcmc_dr9reg}
-\end{figure}
+\item \textbf{Stellar density template (\textit{nStar})}: Adding the stellar density template (\textit{nonlinear conservative II+ nStar}) does not change the constraints from BASS+MzLS much, but it shifts the $\fnl$ distributions to lower values in DECaLS North and DECaLS South by $0.5\sigma$ and $\sigma$, respectively, reconciling all constraints with $\fnl=0$. This might indicate that there are either some unresolved issues with the stellar contamination in DECaLS North and DECaLS South. Although our mock test indicates that we could expect a mitigation bias around $\Delta \fnl \sim 10-16$. So we can argue that some of the shift in the results can be associated with the fact that the stellar density maps is correlated with large-scale structure. We note that differences are more significant when all maps and stellar density are used as input. This is expected as cleaning the data with more maps is more prone to the over-correction issue.
 
-\item \textbf{Stellar density template (\textit{nStar})}: Adding the stellar density template (\textit{nonlinear conservative II+ nStar}) does not change the constraints from BASS+MzLS much, but it shifts the $\fnl$ distributions to lower values in DECaLS North and DECaLS South by $0.5\sigma$ and $\sigma$, respectively, reconciling all constraints with $\fnl=0$. This might indicate that there are either some unresolved issues with the stellar contamination in DECaLS North and DECaLS South. Although our mock test indicates that we could expect a mitigation bias around $\Delta \fnl \sim 10-16$. So we can argue that some of the shift in constraints can be associated with the fact that the stellar density template is correlating with large-scale structure. We note that differences are more significant when all maps and stellar density are used as input. This is expected as cleaning the data with more maps is more prone to the over-correction issue.
+\item \textbf{Pixel completeness (\textit{comp. cut})}: We discard pixels with fractional completeness less than half to assess the effect of partially complete pixels on $\fnl$. This cut removes $.6\%$ of the survey area, and no changes in the $\fnl$ constraints are observed.
 
-\item \textbf{Pixel completeness (\textit{comp. cut})}: We discard pixels with $f_{\rm pix} < 0.5$ from the analysis to assess the effect of partially complete pixels on $\fnl$. The $f_{\rm pix}$ cut removes only $.6\%$ of the survey area, but no changes in the $\fnl$ constraints are observed.
+\item \textbf{Imaging quality (\textit{imag. cut})}: Pixels with poor photometry are removed from our sample by applying the following cuts on imaging; $E[B-V]<0.1$, $nStar < 3000$, ${\rm depth}_{g} > 23.2$, ${\rm depth}_{r} > 22.6$, ${\rm depth}_{z} > 22.5$, ${\rm psfsize}_{g}<2.5$, ${\rm psfsize}_{r}<2.5$, and ${\rm psfsize}_{z}<2$. Despite losing $8\%$ of the survey mask, we obtain a negligible effect on the best fit $\fnl$ estimate from fitting the DESI power spectrum. When each region is fit separately, we find that the BASS+MzLS constraint increases by $\Delta \fnl \sim 10$ while the constraints from DECaLS North and DECaLS South do not show significant changes. 
 
-\item \textbf{Imaging quality (\textit{imag. cut})}: Pixels with poor photometry are removed the DR9 sample by applying the following cuts on imaging properties; $E[B-V]<0.1$, $nStar < 3000$, ${\rm depth}_{g} > 23.2$, ${\rm depth}_{r} > 22.6$, ${\rm depth}_{z} > 22.5$, ${\rm psfsize}_{g}<2.5$, ${\rm psfsize}_{r}<2.5$, and ${\rm psfsize}_{z}<2$. Despite losing $8\%$ of the survey area, we find a negligible impact on the best fit $\fnl$ estimate from fitting the DESI power spectrum. When we fit each region separately, we find that the BASS+MzLS constraint increases by $\Delta \fnl \sim 10$ while the constraints from DECaLS North and DECaLS South do not show significant changes after this cut. 
+\item \textbf{Covariance matrix (\textit{cov})}: We fit the same LRG power spectrum with \textit{nonlinear conservative II} correction, but use a covariance matrix constructed from the $\fnl=76.92$ mocks. With the new covariance, a $12\%$ increase in the $\sigma \fnl$ is observed. We also find that the best fit and marginalized mean estimates of $\fnl$ increase by $10-11\%$. Overall, we find that the differences are not significant in comparison to the statistical precision.
 
-\item \textbf{Covariance matrix (\textit{cov})}: We fit the DR9 power spectrum but use a covariance matrix constructed from the $\fnl=76.92$ mocks. With the new covariance, a $12\%$ increase in the $\sigma \fnl$ is observed. We also find that the best fit and marginalized mean estimates of $\fnl$ increase by $10-11\%$. Overall, we find that the differences are less than the statistical error.
+\item \textbf{External maps (\textit{CALIBZ+HI})}: The nonlinear \textit{conservative II} method is re-trained with two additional external maps for the neutral hydrogen column density (HI) and the z-band photometric calibration error (CALIBZ). This test is only performed for the DECaLS region due to the data availability limitations and issues with the maps. With this correction, we find that the best fit $\fnl$ increases from $41.02$ to $55.46$ for DECaLS North and from $31.24$ to $33.79$ for DECaLS South. This might suggest that adding these two maps increases the input noise and thus negatively impacts the performance of the model.
 
-\item \textbf{External maps (\textit{CALIBZ+HI})}: The nonlinear \textit{conservative II} method is re-trained using two additional external maps for the neutral hydrogen column density (HI) and the z-band photometric calibration error (CALIBZ). This test is only performed for the DECaLS region due to the limitation and issues with the maps. With this correction, we find that the best fit $\fnl$ increases from $41.02$ to $55.46$ for DECaLS North and from $31.24$ to $33.79$ for DECaLS South.
+\item \textbf{Declination mask (\textit{no DEC cut})}: The fiducial mask removes the spurious disconnected islands in DECaLS North and regions with DEC $<-30$ in DECaLS South, where there is a high likelihood of calibration issues as different standard stars are used for photometric calibrations. We analyze our sample without these cuts, and find that the best fit and marginalized $\fnl$ mean estimates from DECaLS South shift significantly by $\Delta \fnl \sim 10$ which supports the issue of photometric systematics in the DECaLS South region below DEC $=-30$. While the constraints from DECaLS North do not change significantly.
 
-\item \textbf{Declination mask (\textit{no DEC cut})}: The fiducial mask removes the spurious islands in DECaLS North and DECaLS South below DEC = -30, where different standard stars are used for photometric calibrations, to avoid potential systematic effects. We analyze the DR9 without these cuts, and find that the best fit and marginalized $\fnl$ mean estimates from DECaLS South shift significantly by $\Delta \fnl \sim 10$ which supports the likelihood of photometric issues in the DECaLS South region below DEC $=-30$. While the constraints from DECaLS North do not change significantly.
-
-\item \textbf{Scale dependence (\textit{varying $\ell_{\rm min}$})}: We decrease the largest scale (or increase the lowest harmonic mode $\ell_{\rm min}$) while fitting the power spectrum. Fig. \ref{fig:mcmc_dr9elmin} illustrates the $\fnl$ results for the DESI, BASS+MzLS, DECaLS North, and DECaLS South regions. The points represent the marginalized mean estimates and the errorbars represent $68$\% confidence derived from MCMC chains. We find noticeable systematic trends in DECaLS North and BASS+MzLS on scales $12<\ell<18$, but the overall constraints are robust against $\ell_{\rm min}$.
+\item \textbf{Scale dependence (\textit{varying $\ell_{\rm min}$})}: This test decreases the largest scale (or increase the lowest harmonic mode $\ell_{\rm min}$) while fitting the power spectrum. Figure \ref{fig:mcmc_dr9elmin} illustrates the $\fnl$ results for the DESI, BASS+MzLS, DECaLS North, and DECaLS South regions. The points represent the marginalized mean estimates and the errorbars represent $68$\% confidence derived from MCMC chains. We find noticeable systematic trends in DECaLS North and BASS+MzLS on scales $12<\ell<18$, but the overall constraints are robust against $\ell_{\rm min}$.
 
 \end{itemize}
 
 \begin{figure}
     \centering
+    \includegraphics[width=0.45\textwidth]{figures/mcmc_dr9regions.pdf} 
+    \caption{The uncalibrated 2D constraints from the DR9 LRG sample for each imaging survey compared with that for the whole DESI footprint. The dark and light shades represent the $68\%$ and $95\%$ confidence intervals, respectively.}\label{fig:mcmc_dr9reg}
+\end{figure}
+
+
+\begin{figure}
+    \centering
     \includegraphics[width=0.45\textwidth]{figures/fnl_elmin.pdf}     
-    \caption{Robustness of the uncalibrated DR9 constraints w.r.t. the largest scale (lowest $\ell$ mode) used in MCMC regression. Points represent marginalized mean estimates of $\fnl$ and errorbars represent $68$\% confidence.}\label{fig:mcmc_dr9elmin}
+    \caption{The uncalibrated $\fnl$ constraints vs the lowest $\ell$ mode used in MCMC with the DR9 LRG sample. The points represent marginalized mean estimates of $\fnl$ and errorbars represent $68$\% confidence.}\label{fig:mcmc_dr9elmin}
 \end{figure}
 
 
