--- a/sections/authorlist.tex
+++ b/sections/authorlist.tex
@@ -1,10 +1,8 @@
 % If you need two or more lines of authors, add an extra line using \newauthor
 \author[M. Rezaie et al.]{Mehdi Rezaie$^{1}$, Ashley J. Ross$^{2}$, Hee-Jong Seo$^{3}$,  Hui Kong$^{3}$,  Anna Porredon$^{3}$,\newauthor
-Edmond Chaussidon$^{4}$, Lado Samushia$^{1}$, Rongpu Zhou$^{5}$, Alex Krolewski$^{6,7,8}$,\newauthor
-Arnaud de Mattia$^{4}$, Jose Bermejo$^{?}$, Florian Beutler$^{9}$, Christophe Yeche$^{4}$,\newauthor
-Nathalie Palanque-Delabrouille$^{4,5}$, Klaus Honscheid$^{2,10}$, Santi Avila, Eva Mueller,\newauthor
-Will Percival, Shadab Alam, Benedict Bahr-Kalus, Chia-Hsun Chuang, \newauthor 
-Noah Weaverdyck, Simone Ferraro, Tanveer Karim, and Adam Myers
+Lado Samushia$^{1}$, Edmond Chaussidon$^{4}$, Rongpu Zhou$^{5}$, Alex Krolewski$^{6,7,8}$,\newauthor
+Arnaud de Mattia$^{4}$,  Santi Avila, Benedict Bahr-Kalus, Jose Bermejo-Climent$^{?}$,\newauthor Florian Beutler$^{9}$, Klaus Honscheid$^{2,10}$, Eva Mueller, Adam Myers,\newauthor
+Nathalie Palanque-Delabrouille$^{4,5}$, Will Percival, Christophe Yeche$^{4}$
 \\~\\
 % List of institutions
 $^{1}$Department of Physics, Kansas State University, 116 Cardwell Hall, Manhattan, KS 66506, USA\\
